добавление аналитики